Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60665

jetson-tx1: Failed to query EGL extensions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9
    • 5.9
    • Device Creation
    • None
    • 9ea07a2fbc9f3aa6f313b3dfb826363b76bfe51f

      Launching application from QtCreator in Jetson TX1 fails with

      Failed to query EGL extensions
      Required extensions missing!
      

      This happens because QtCreator sets DISPLAY environment variable to the run environment, which causes NVIDIA's display drivers to work incorrectly.
      Workaround is to unset it from QtCreator's Run Settings

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kari.oikarinen Kari Oikarinen
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes